--- a/vyne-query-service/src/main/web/src/app/type-viewer/type-link-graph/type-link-graph.component.html
+++ b/vyne-query-service/src/main/web/src/app/type-viewer/type-link-graph/type-link-graph.component.html
@@ -3,8 +3,8 @@
       class="chart-container" [links]="typeLinks.links"
                (legendLabelClick)="onLegendLabelClick($event)"
                [nodes]="typeLinks.nodes"
-               autoZoom="true"
-               autoCenter="true"
+               [autoZoom]="true"
+               [autoCenter]="true"
                [scheme]="colorScheme" [orientation]="orientation"
                [curve]="curve" (select)="select($event)">
 
