added results table

--- a/vyne-query-service/src/main/web/src/app/query-wizard/result-display/result-container.component.scss
+++ b/vyne-query-service/src/main/web/src/app/query-wizard/result-display/result-container.component.scss
@@ -8,6 +8,11 @@
   margin-top: 1rem;
 }
 
+app-results-table {
+  height: 300px;
+  display: block;
+}
+
 app-call-explorer {
   margin-top: 1rem;
   display: block;
