--- a/vyne-query-service/src/main/web/src/app/query-wizard/result-display/result-container.component.html
+++ b/vyne-query-service/src/main/web/src/app/query-wizard/result-display/result-container.component.html
@@ -10,6 +10,15 @@
 
   <div class="results-container">
     <mat-tab-group>
+      <mat-tab label="Table">
+        <div *ngFor="let resultTypeName of queryResultTypeNames" class="result-object-view">
+          <app-results-table [instance]="getResultForTypeName(resultTypeName)"
+                             [schema]="schema"
+                             [selectable]="true"
+                             [type]="getTypeIfNotIncluded(resultTypeName)"
+                             (instanceClicked)="instanceClicked($event)"></app-results-table>
+        </div>
+      </mat-tab>
       <mat-tab label="Result">
         <div *ngFor="let resultTypeName of queryResultTypeNames" class="result-object-view">
           <app-object-view [instance]="getResultForTypeName(resultTypeName)"
