--- a/vyne-query-service/src/main/web/src/app/query-wizard/result-display/result-container.component.scss
+++ b/vyne-query-service/src/main/web/src/app/query-wizard/result-display/result-container.component.scss
@@ -83,5 +83,8 @@ app-call-explorer {
   margin: 24px 0;
 }
 
+.downloadFileButton{
+  margin: 1rem 0;
+}
 // Use these for border colors of nesting levels:
 // #7280d9, #fe8736, #06b8ff, #00bbaf, #ff3769, #40c14a, #fc6363, #ffd600
