Added vyneql query

--- a/vyne-query-service/src/main/web/src/app/query-panel/query-wizard/query-wizard.component.scss
+++ b/vyne-query-service/src/main/web/src/app/query-panel/query-wizard/query-wizard.component.scss
@@ -67,15 +67,14 @@ app-vyne-query-viewer {
     margin-bottom: 10px;
   }
 
-  .target-type-input {
 
-  }
 }
 
 .row {
   width: 100%;
   display: flex;
-  margin-bottom: 35px;
+  margin-top: 32px;
+  margin-bottom: 3px;
 }
 
 .new-fact-editor {
