--- a/vyne-query-service/src/main/web/src/app/query-panel/query-editor/query-editor.component.html
+++ b/vyne-query-service/src/main/web/src/app/query-panel/query-editor/query-editor.component.html
@@ -28,7 +28,7 @@
       <mat-spinner *ngIf="loading" [diameter]=40></mat-spinner>
 
 
-      <mat-card *ngIf="lastQueryResult">
+      <mat-card *ngIf="lastQueryResult" style="width: 100%">
         <mat-card-header>
           <mat-card-title>Results</mat-card-title>
         </mat-card-header>
