--- a/vyne-query-service/src/main/web/src/app/query-panel/result-display/result-container.component.html
+++ b/vyne-query-service/src/main/web/src/app/query-panel/result-display/result-container.component.html
@@ -20,7 +20,7 @@
   </div>
 
   <div class="results-container">
-    <cdk-virtual-scroll-viewport itemSize="50" class="virtualScroll-viewport testM">
+    <cdk-virtual-scroll-viewport itemSize="50" class="virtualScroll-viewport">
       <mat-tab-group>
         <mat-tab label="Table">
           <div *ngFor="let resultTypeName of queryResultTypeNames" class="result-object-view">
