--- a/vyne-query-service/src/main/web/src/app/query-panel/query-panel.component.scss
+++ b/vyne-query-service/src/main/web/src/app/query-panel/query-panel.component.scss
@@ -11,6 +11,11 @@
 
 }
 
+.query-editor-container{
+  overflow: hidden;
+  height: 100%
+}
+
 :host ::ng-deep .mat-tab-body-wrapper {
   flex-grow: 1;
 }
