Retry a query from Vyne UI

--- a/vyne-query-service/src/main/web/src/app/query-history/query-history.component.html
+++ b/vyne-query-service/src/main/web/src/app/query-history/query-history.component.html
@@ -37,6 +37,10 @@
     </div>
     <div class="results-section">
       <div class="results-container">
+        <div class="actions-container" >
+          <button mat-stroked-button (click)="queryAgain()" >Query again</button>
+        </div>
+
           <query-result-container [result]="activeRecord?.response"
                                   (instanceSelected)="onInstanceSelected($event)"
           ></query-result-container>
