--- a/vyne-query-service/src/main/web/src/app/query-history/query-history.component.scss
+++ b/vyne-query-service/src/main/web/src/app/query-history/query-history.component.scss
@@ -26,6 +26,14 @@ mat-sidenav-container {
   height: 100%;
 }
 
+.actions-container {
+  display: flex;
+  align-items: flex-end;
+  flex-direction: column;
+  margin-top: 8px;
+  margin-bottom: 8px;
+}
+
 :host {
   display: flex;
   flex-direction: column;
