--- a/vyne-query-service/src/main/web/src/app/query-panel/query-editor/query-editor.component.html
+++ b/vyne-query-service/src/main/web/src/app/query-panel/query-editor/query-editor.component.html
@@ -7,7 +7,7 @@
       <mat-card-content>
 
         <div class="code-viewer-container">
-          <ngx-monaco-editor [options]="editorOptions" class="code-editor" [(ngModel)]="content" #editor>
+          <ngx-monaco-editor [options]="editorOptions" class="code-editor" [(ngModel)]="query" #editor>
           </ngx-monaco-editor>
         </div>
 
