casks resolve across multiple tables, support for else/null in when blocks, updated discoverable-types to account for synonyms. Refactored for single and multiple result sets.

--- a/vyne-query-service/src/main/web/src/app/query-panel/query-editor/query-editor.component.html
+++ b/vyne-query-service/src/main/web/src/app/query-panel/query-editor/query-editor.component.html
@@ -11,7 +11,7 @@
           </ngx-monaco-editor>
         </div>
 
-        <div class="buttons-container">
+        <div class="buttons-container query-submit-button">
           <button mat-raised-button color="primary" [disabled]="!monacoModel || !monacoModel.getValue() || loading"
             (click)="submitQuery()">Submit</button>
         </div>
