--- a/vyne-query-service/src/main/web/src/app/query-panel/query-editor/query-editor.component.scss
+++ b/vyne-query-service/src/main/web/src/app/query-panel/query-editor/query-editor.component.scss
@@ -22,7 +22,7 @@
 
       width: 100%;
       height: 100%;
-    
+
     }
 }
 
@@ -37,6 +37,10 @@
   width: 100%;
   margin: 5px;
 
+}
+
+.query-submit-button{
+  margin: 1rem 0;
 }
 
 .row {
