--- a/vyne-query-service/src/main/web/src/app/query-panel/query-panel.component.scss
+++ b/vyne-query-service/src/main/web/src/app/query-panel/query-panel.component.scss
@@ -3,7 +3,8 @@
 
 .container {
   flex: 1;
-  height: 100%;
+  height: 200vh;
+  overflow: hidden;
 
   &:not(:last-child) {
     padding-right: 45px;
