--- a/vyne-query-service/src/main/web/src/app/query-panel/result-display/result-container.component.html
+++ b/vyne-query-service/src/main/web/src/app/query-panel/result-display/result-container.component.html
@@ -23,7 +23,7 @@
     <cdk-virtual-scroll-viewport itemSize="50" class="virtualScroll-viewport">
       <mat-tab-group>
         <mat-tab label="Table">
-          <div *ngFor="let resultTypeName of queryResultTypeNames" class="result-object-view">
+          <div *ngFor="let resultTypeName of queryResultTypeNames" [ngClass]="isQueryHistoryPage ? 'result-object-view-sml' : 'result-object-view'">
             <app-results-table [instance]="getResultForTypeName(resultTypeName)"
                                [schema]="schema"
                                [selectable]="true"
@@ -32,7 +32,7 @@
           </div>
         </mat-tab>
         <mat-tab label="Result">
-          <div *ngFor="let resultTypeName of queryResultTypeNames" class="result-object-view">
+          <div *ngFor="let resultTypeName of queryResultTypeNames"  [ngClass]="isQueryHistoryPage ? 'result-object-view-sml' : 'result-object-view'">
 
             <app-object-view [instance]="getResultForTypeName(resultTypeName)"
                              [schema]="schema"
