--- a/vyne-query-service/src/main/web/src/app/query-panel/query-panel.component.html
+++ b/vyne-query-service/src/main/web/src/app/query-panel/query-panel.component.html
@@ -7,7 +7,7 @@
 <div class="page-content" style="z-index: 0">
     <div class="container">
 
-      <mat-tab-group mat-align-tabs="start" style="height: 100%" [selectedIndex]="activeTab()">
+      <mat-tab-group mat-align-tabs="start" style="height: 100%"  [(selectedIndex)]="selectedIndex">
         <mat-tab label="Query Builder">
          <query-wizard></query-wizard>
         </mat-tab>
