--- a/vyne-query-service/src/main/web/src/app/schema-explorer/new-schema-wizard/new-schema-wizard.component.html
+++ b/vyne-query-service/src/main/web/src/app/schema-explorer/new-schema-wizard/new-schema-wizard.component.html
@@ -11,7 +11,7 @@
             <form [formGroup]="importOptionsFormGroup">
               <div formGroupName="schema">
                 <mat-form-field class="url">
-                  <input matInput placeholder="Schema url" formControlName="url" required>
+                  <input matInput placeholder="Schema url" formControlName="url" required/>
                 </mat-form-field>
                 <mat-form-field class="schema-type">
                   <mat-select placeholder="Type" formControlName="schemaType" required>
