--- a/vyne-query-service/src/main/web/src/app/query-panel/result-display/result-container.component.html
+++ b/vyne-query-service/src/main/web/src/app/query-panel/result-display/result-container.component.html
@@ -6,6 +6,7 @@
   <div class="result-status unsuccessful-search" *ngIf="isUnsuccessfulSearch">
     <i class="material-icons">error_outline</i>
     <span>Couldn't find a path for the following types: {{ unmatchedNodes }}</span>
+    <span>{{ error }}</span>
   </div>
   <div class="result-status results-summary" *ngIf="isSuccess">
     <span>Completed successfully</span>
