--- a/vyne-query-service/src/main/web/src/app/data-explorer/assign-types-dialog/assign-type-to-column-dialog.component.scss
+++ b/vyne-query-service/src/main/web/src/app/data-explorer/assign-types-dialog/assign-type-to-column-dialog.component.scss
@@ -1,4 +1,7 @@
 .add-type-dialog-content{
-  height: 20vh;
-  width: 40rem;
+  min-height: 20vh;
+  max-height: 80vh;
+  height: auto;
+  width: auto;
+  min-width: 40rem;
 }
