Very small fix for type assignments

--- a/vyne-query-service/src/main/web/src/app/data-explorer/assign-types-dialog/assign-type-to-column-dialog.component.html
+++ b/vyne-query-service/src/main/web/src/app/data-explorer/assign-types-dialog/assign-type-to-column-dialog.component.html
@@ -71,7 +71,7 @@
 
   <mat-dialog-actions>
 
-    <button class="mat-raised-button"
+    <button mat-raised-button matDialogClose
             (click)="close()">
       Close
     </button>
