header offset, csv parse with header offset, irrelevant data in csv source

--- a/vyne-query-service/src/main/web/src/app/data-explorer/data-source-config.component.scss
+++ b/vyne-query-service/src/main/web/src/app/data-explorer/data-source-config.component.scss
@@ -26,3 +26,10 @@ span {
   }
   padding: 1rem;
 }
+
+.add-column-name-text-field{
+  width: 100%;
+}
+.column-name-input-form{
+  margin-top:1vh
+}
