--- a/vyne-query-service/src/main/web/src/app/data-explorer/data-explorer.component.html
+++ b/vyne-query-service/src/main/web/src/app/data-explorer/data-explorer.component.html
@@ -50,10 +50,11 @@
       <mat-tab label="Source" *ngIf="fileContents">
         <app-csv-viewer [source]="csvContents" *ngIf="isCsvContent"
                         [schema]="schema"
+                        [csvOptions] = "csvOptions"
                         (headerTypesChanged)="getHeadersWithAssignedTypes($event)"
                         [isTypeNamePanelVisible]="isTypeNamePanelOpen"
                         [isGenerateSchemaPanelVisible]="showGenerateSchemaPanel"
-                        [firstRowAsHeaders]="csvOptions.firstRowAsHeader"
+                        [firstRowAsHeaders]="csvOptions.firstRecordAsHeader"
         ></app-csv-viewer>
         <td-highlight lang="json" [content]="fileContents" *ngIf="!isCsvContent">
         </td-highlight>
