Lens 327 - Remove assigned types from csv display table

--- a/vyne-query-service/src/main/web/src/app/data-explorer/csv-viewer.component.scss
+++ b/vyne-query-service/src/main/web/src/app/data-explorer/csv-viewer.component.scss
@@ -43,10 +43,16 @@ table {
   }
 }
 
-.badge-hidden{
+.clear-icon {
+  height: .8rem;
+  cursor: pointer
+}
+
+.badge-hidden {
   display: none
 }
-.badge-visible{
+
+.badge-visible {
   display: flex
 }
 
