--- a/vyne-query-service/src/main/web/src/app/data-explorer/data-explorer.component.html
+++ b/vyne-query-service/src/main/web/src/app/data-explorer/data-explorer.component.html
@@ -5,11 +5,12 @@
 </mat-toolbar>
 
 <mat-sidenav-container [hasBackdrop]="false">
-  <mat-drawer #drawer mode="over" position="end" [(opened)]="showSidePanel">
+  <mat-drawer #drawer mode="over" position="end" [(opened)]="showSidePanel && this.shouldTypedInstancePanelBeVisible">
     <div class="drawer-content">
       <app-typed-instance-panel-container
         [instance]="selectedTypeInstance"
         [type]="selectedTypeInstanceType"
+        (hasTypedInstanceDrawerClosed)="onCloseTypedInstanceDrawer($event)"
       ></app-typed-instance-panel-container>
     </div>
   </mat-drawer>
