--- a/vyne-query-service/src/main/web/src/app/typed-instance-panel/typed-instance-panel.component.scss
+++ b/vyne-query-service/src/main/web/src/app/typed-instance-panel/typed-instance-panel.component.scss
@@ -7,3 +7,13 @@
     margin: 0
   }
 }
+
+.clear-icon {
+  width: 16px;
+}
+
+.clear-button{
+  position: absolute;
+  right: 0;
+  margin-right: 1em;
+}
