--- a/vyne-query-service/src/main/web/src/app/query-panel/query-panel.component.html
+++ b/vyne-query-service/src/main/web/src/app/query-panel/query-panel.component.html
@@ -5,10 +5,11 @@
 </mat-toolbar>
 
 <mat-sidenav-container [hasBackdrop]="true">
-  <mat-drawer #drawer mode="over" position="end" [(opened)]="showSidePanel">
+  <mat-drawer #drawer mode="over" position="end" [(opened)]="showSidePanel && this.shouldTypedInstancePanelBeVisible">
     <div class="drawer-content">
       <app-typed-instance-panel-container
         [instance]="selectedTypeInstance"
+        (hasTypedInstanceDrawerClosed)="onCloseTypedInstanceDrawer($event)"
         [type]="selectedTypeInstanceType"
         [lineageGraph]="lineageGraph"
       ></app-typed-instance-panel-container>
