tooltip is now present for call explorer

--- a/vyne-query-service/src/main/web/src/app/query-panel/taxi-viewer/call-explorer/call-explorer.component.html
+++ b/vyne-query-service/src/main/web/src/app/query-panel/taxi-viewer/call-explorer/call-explorer.component.html
@@ -6,7 +6,7 @@
     </div>
     <div class="operation" *ngFor="let operation of queryResult?.remoteCalls" (click)="selectOperation(operation)">
       <div class="verb">{{ operation.method }}</div>
-      <div class="address">{{ getPathOnly(operation.addresss) }}</div>
+      <div class="address" [matTooltip]="getPathOnly(operation.addresss)">{{ getPathOnly(operation.addresss) }}</div>
     </div>
   </div>
   <div class="chart-container" *ngIf="!selectedOperation">
