UI/Tooltips for graphs

--- a/vyne-query-service/src/main/web/src/app/type-viewer/type-link-graph/type-link-graph.component.html
+++ b/vyne-query-service/src/main/web/src/app/type-viewer/type-link-graph/type-link-graph.component.html
@@ -17,8 +17,11 @@
         </svg:filter>
       </ng-template>
 
-      <ng-template #nodeTemplate let-node>
-        <svg:g class="node" style="filter:url(#shadow)">
+      <ng-template #nodeTemplate  let-node>
+        <svg:g class="node" style="filter:url(#shadow)" ngx-tooltip
+               [tooltipPlacement]="'top'"s
+               [tooltipType]="'tooltip'"
+               [tooltipTitle]="tooltipTitle(node)">
           <svg:path [attr.d]="outerRectangle(node.width, node.height)" stroke="none" fill="white"></svg:path>
           <svg:path [attr.d]="innerRectangle(4, node.height)" stroke="none" [attr.fill]="getStroke(node)"></svg:path>
           <!--          <svg:rect [attr.width]="node.width" [attr.height]="node.height"-->
