--- a/vyne-query-service/src/main/web/src/app/inheritence-graph/inheritance-graph.html
+++ b/vyne-query-service/src/main/web/src/app/inheritence-graph/inheritance-graph.html
@@ -7,7 +7,6 @@
              [draggingEnabled]="false"
              [scheme]="colorScheme" [orientation]="orientation"
              [curve]="curve" (select)="select($event)">
-
     <ng-template #defsTemplate>
       <svg:marker id="arrow" viewBox="0 -5 10 10" refX="8" refY="0" markerWidth="4" markerHeight="4" orient="auto">
         <svg:path d="M0,-5L10,0L0,5" class="arrow-head"/>
@@ -18,7 +17,10 @@
     </ng-template>
 
     <ng-template #nodeTemplate let-node>
-      <svg:g class="node" style="filter:url(#shadow)">
+      <svg:g class="node" style="filter:url(#shadow)"  ngx-tooltip
+             [tooltipPlacement]="'top'"
+             [tooltipType]="'tooltip'"
+             [tooltipTitle]="node.fullyQualifiedName">
         <svg:path [attr.d]="outerRectangle(node.width, node.height)" stroke="none" fill="white"></svg:path>
         <svg:path [attr.d]="innerRectangle(4, node.height)" stroke="none" [attr.fill]="getStroke(node)"></svg:path>
         <!--          <svg:rect [attr.width]="node.width" [attr.height]="node.height"-->
